# lizard

./: AUTHORS  COPYRIGHT  ChangeLog  ChangeLog.API  README  README.md  convey.yaml  im.pidgin.Finch3.yml  im.pidgin.Pidgin3.yml  meson.build  meson_options.txt  valgrind-suppressions  vc
doc/reference/finch/: finch.toml.in  meson.build  urlmap.js
doc/reference/libpurple/: contributing.md  libpurple.toml.in  meson.build  plugin_i18n.md  plugin_ids.md  signals_account.md  signals_blist.md  signals_cmd.md  signals_connection.md  signals_conversation.md  signals_core.md  signals_jabber.md  signals_savedstatus.md  signals_xfer.md  tut_c_plugins.md  urlmap.js
doc/reference/pidgin/: meson.build  pidgin.toml.in  signals_gtkblist.md  signals_gtkconv.md  urlmap.js
finch/: finch.c  finch.h.in  finchnotifications.c  finchnotifications.h  finchui.c  finchui.h  gntaccount.c  gntaccount.h  gntblist.c  gntblist.h  gntconn.c  gntconn.h  gntconv.c  gntconv.h  gntdebug.c  gntdebug.h  gntidle.c  gntidle.h  gntmedia.c  gntmedia.h  gntmenuutil.c  gntmenuutil.h  gntnotify.c  gntnotify.h  gntplugin.c  gntplugin.h  gntprefs.c  gntprefs.h  gntrequest.c  gntrequest.h  gntroomlist.c  gntroomlist.h  gntstatus.c  gntstatus.h  gntxfer.c  gntxfer.h  libfinch.c  libfinch.h  meson.build
finch/plugins/: meson.build
finch/plugins/gntclipboard/: gntclipboard.c  meson.build
finch/plugins/gntgf/: gntgf.c  im.pidgin.Finch.plugin.GntGf.gschema.xml  meson.build
finch/plugins/gnttinyurl/: gnttinyurl.c  im.pidgin.Finch.plugin.TinyURL.gschema.xml  meson.build
finch/plugins/grouping/: grouping.c  meson.build
finch/plugins/lastlog/: lastlog.c  meson.build
libpurple/: account.c  account.h  accounts.c  accounts.h  action.h  blistnode.c  blistnode.h  buddy.c  buddy.h  buddyicon.c  buddyicon.h  buddylist.c  buddylist.h  chat.c  chat.h  circularbuffer.c  circularbuffer.h  cmds.c  cmds.h  connection.c  connection.h  contact.c  contact.h  conversations.c  conversations.h  core.c  core.h  countingnode.c  countingnode.h  debug.c  debug.h  eventloop.c  eventloop.h  glibcompat.h  group.c  group.h  idle.c  idle.h  image-store.c  image-store.h  (+171 more)
libpurple/data/: im.pidgin.Purple.gschema.xml  meson.build  purple3-url-handler.desktop.in.in
libpurple/media/: backend-iface.c  backend-iface.h  candidate.c  candidate.h  codec.c  codec.h  enum-types.c  enum-types.h
libpurple/plugins/: meson.build
libpurple/plugins/autoaccept/: autoaccept.c  im.pidgin.Purple.plugin.AutoAccept.gschema.xml  meson.build
libpurple/plugins/buddynote/: buddynote.c  meson.build
libpurple/plugins/idle/: idle.c  meson.build
libpurple/plugins/joinpart/: im.pidgin.Purple.plugin.JoinPart.gschema.xml  joinpart.c  meson.build
libpurple/plugins/keychain-access/: keychain-access.c  meson.build
libpurple/plugins/kwallet/: meson.build  purplekwallet.cpp  purplekwallet.h
libpurple/plugins/libsecret/: libsecret.c  meson.build
libpurple/plugins/notification-sound/: im.pidgin.Purple.plugin.NotificationSound.gschema.xml  meson.build  notification-sound.c
libpurple/protocols/: meson.build
libpurple/resources/: libpurple.gresource.xml
libpurple/tests/: meson.build  test_account_manager.c  test_authorization_request.c  test_contact.c  test_contact_info.c  test_contact_manager.c  test_conversation.c  test_conversation_member.c  test_credential_manager.c  test_credential_provider.c  test_history_adapter.c  test_history_manager.c  test_keyvaluepair.c  test_markup.c  test_menu.c  test_message.c  test_notification.c  test_notification_manager.c  test_person.c  test_presence.c  test_protocol.c  test_protocol_action.c  test_protocol_xfer.c  test_purplepath.c  test_queued_output_stream.c  test_str.c  test_tags.c  test_ui.c  test_util.c  test_whiteboard_manager.c  test_xmlnode.c
libpurple/win32/: libc_interface.c  libc_interface.h  libc_internal.h  win32dep.c
pidgin/: gtkaccount.c  gtkblist.h  gtkconv.c  gtkidle.c  gtkidle.h  gtkmedia.c  gtkmedia.h  gtknotify.h  gtkpluginpref.c  gtkrequest.h  gtkroomlist.h  gtksavedstatuses.h  gtkutils.h  gtkwhiteboard.c  gtkwhiteboard.h  gtkxfer.c  gtkxfer.h  libpidgin.c  meson.build  pidgin.c  pidginabout.h  pidginaccountchooser.c  pidginaccountchooser.h  pidginaccounteditor.c  pidginaccountfilterconnected.c  pidginaccountfilterconnected.h  pidginaccountfilterprotocol.c  pidginaccountmanager.c  pidginaccountsdisabledmenu.c  pidginaccountsenabledmenu.c  pidginactiongroup.c  pidginactiongroup.h  pidginaddbuddydialog.c  pidginaddbuddydialog.h  pidginaddchatdialog.c  pidginapplication.c  pidginattachment.c  pidginavatar.c  pidginavatar.h  pidgincolor.h  (+32 more)
pidgin/data/: meson.build
pidgin/pixmaps/: meson.build
pidgin/plugins/: meson.build
pidgin/prefs/: pidginawayprefs.h  pidginconversationprefs.c  pidginconversationprefs.h  pidgincredentialprefs.h  pidgincredentialproviderrow.h  pidginnetworkprefs.c  pidginnetworkprefs.h  pidginvvprefs.c
pidgin/resources/: pidgin.gresource.xml  presenceicon.ui  statusprimitivechooser.ui
pidgin/win32/: gtkwin32dep.c
po/: LINGUAS  (+98 more)
subprojects/gplugin/: .clang-format  .hgignore  .hgtags  .mailmap  .reviewboardrc  COPYRIGHT  ChangeLog  HACKING.OSX  HACKING.md  HISTORY.md  INSTALL.md  README.md  convey.yml  meson.build  meson_options.txt
subprojects/hasl/: .hgignore  .reviewboardrc  AUTHORS  LICENSE  README.md  convey.yaml  meson.build  meson_options.txt
subprojects/libgnt/: .clang-format  .hgignore  .hgtags  .reviewboardrc  COPYRIGHT  ChangeLog  README.md  convey.yml  gnt-skel.c  gnt-skel.h  gnt.h.in  gntbindable.c  gntbindable.h  gntbox.c  gntbox.h  gntboxprivate.h  gntbutton.c  gntbutton.h  gntcheckbox.c  gntcheckbox.h  gntclipboard.c  gntclipboard.h  gntcolors.c  gntcolors.h  gntcombobox.c  gntcombobox.h  gntentry.c  gntentry.h  gntfilesel.c  gntfilesel.h  gntinternal.h  gntkeys.c  gntkeys.h  gntlabel.c  gntlabel.h  gntline.c  gntline.h  gntmain.c  gntmain.h  gntmainprivate.h  (+40 more)
subprojects/talkatu/: .clang-format  .hgignore  .hgtags  .reviewboardrc  AUTHORS  ChangeLog  HACKING  INSTALL  README.md  RELEASE.md  convey.yml  meson.build  meson_options.txt  test.html  test.md
(+1924 files in other folders)
